--- a/style.css
+++ b/style.css
@@ -351,6 +351,7 @@
   }
   article figure figcaption {
   padding-bottom: 0.25rem;
+  padding-top: 0.25rem;
   font-size: 0.8rem;
   }
   article p {
