--- a/style.css
+++ b/style.css
@@ -2076,6 +2076,9 @@
   article .article-badge.noncanonical{
   border-left-color: #FFA500;
   }
+  article .article-badge.cleanup{
+  border-left-color: #FFA500;
+  }
   article .article-badge .content{
   border: 1px solid #a2a9b1;
   border-left: 0;
@@ -2124,6 +2127,9 @@
   width: 40px;
   }
   article .article-badge.noncanonical .content .icon img{
+  width: 40px;
+  }
+  article .article-badge.cleanup .content .icon img{
   width: 40px;
   }
   article table.infobox tr.plainlink td:first-of-type{
