--- a/style.css
+++ b/style.css
@@ -2158,6 +2158,14 @@
   article .article-badge.uncomplete .content{
   width: unset;
   }
+  article .article-badge.cleanup{
+  clear: left;
+  pointer-events: none;
+  width: unset;
+  }
+  article .article-badge.cleanup .content{
+  width: unset;
+  }
   article div.image-group nav{
 width: 100%;
 height: 2.5rem;
