--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   color: white;
   background-color: #101920;
-  font-family: "Montserrat", "Montserrat Alternates", "Geologica", sans-serif;
+  font-family: "Montserrat", "Montserrat Alternates", sans-serif;
   }
   header#pageheader nav>a{
   display: contents;
@@ -3076,7 +3076,7 @@ outline: 0;
 border-bottom: 1px solid rgba(0,0,0, 0.25);
 padding: 0.25rem 0.5rem;
 justify-content: right;
-font-family: 'Montserrat', 'Montserrat Alternates', 'Geologica';
+font-family: 'Montserrat', 'Montserrat Alternates';
 text-align: right;
 }
 #table-setup input[type="number"]{
